# grep-lite

./: Cargo.toml  README.md
.rpm/: grrs.spec
src/: lib.rs  main.rs
tests/: cli.rs
